; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/humidity/extr_hdc100x.c_hdc100x_update_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/humidity/extr_hdc100x.c_hdc100x_update_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdc100x_data = type { i32, i32 }

@HDC100X_REG_CONFIG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hdc100x_data*, i32, i32)* @hdc100x_update_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hdc100x_update_config(%struct.hdc100x_data* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.hdc100x_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.hdc100x_data* %0, %struct.hdc100x_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = xor i32 %9, -1
  %11 = load %struct.hdc100x_data*, %struct.hdc100x_data** %4, align 8
  %12 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = and i32 %10, %13
  %15 = load i32, i32* %6, align 4
  %16 = or i32 %14, %15
  store i32 %16, i32* %7, align 4
  %17 = load %struct.hdc100x_data*, %struct.hdc100x_data** %4, align 8
  %18 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @HDC100X_REG_CONFIG, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @i2c_smbus_write_word_swapped(i32 %19, i32 %20, i32 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %29, label %25

25:                                               ; preds = %3
  %26 = load i32, i32* %7, align 4
  %27 = load %struct.hdc100x_data*, %struct.hdc100x_data** %4, align 8
  %28 = getelementptr inbounds %struct.hdc100x_data, %struct.hdc100x_data* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %25, %3
  %30 = load i32, i32* %8, align 4
  ret i32 %30
}

declare dso_local i32 @i2c_smbus_write_word_swapped(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
